# vista-unapproved-invoices-mcp

./: .env.example  .gitignore  README.md  agent_instructions.txt  pyproject.toml  viewpoint_auth_api.json  viewpoint_common_api.json
.cursor/plans/: redis_celery_production_rollout_1fd9937e.plan.md
server/: __init__.py  api.py  auth.py  config.py  endpoint_registry.py  generated_models.py  invoice_commitment_compare.py  main.py  models.py  normalization.py  openapi_intelligence.py  prompts.py  resources.py  token_exchange.py  token_manager.py  tool_factory.py
server/services/: __init__.py  analysis_cache.py  analysis_runs.py  invoice_analysis.py
tests/: test_auth.py  test_config_and_api.py  test_endpoint_registry.py  test_generated_models_contracts.py  test_invoice_analysis.py  test_invoice_commitment_compare.py  test_normalization.py  test_openapi_intelligence.py  test_token_exchange.py  test_token_manager.py  test_tool_factory_registration.py  test_tool_factory_utils.py
